# notes-taking

./: .gitignore  README.md  docker-compose.yml
.claude/skills/docker-best-practices/: .skillfish.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/apps/notes/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/notes/management/commands/: seed.py
backend/apps/notes/migrations/: 0001_initial.py  0002_initial.py  0003_seed_categories.py
backend/apps/users/: models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: urls.py
backend/config/settings/: base.py  development.py
docs/: api.md  architecture.md  backend.md  data-models.md  frontend.md  testing.md
frontend/: Dockerfile  jest.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/__tests__/components/: DashboardPage.test.tsx  LoginPage.test.tsx  NoteDetailPage.test.tsx
frontend/__tests__/lib/: api.test.ts  types.test.ts  (+1 more)
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DashboardPage.tsx  LoginPage.tsx  NoteDetailPage.tsx
frontend/e2e/: dashboard.spec.ts  helpers.ts  login.spec.ts  note-detail.spec.ts
frontend/lib/: api.ts  fonts.ts  store.tsx  types.ts  utils.ts
infrastructure/: acm.tf  alb.tf  cloudfront.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  rds.tf  route53.tf  secrets.tf  security_groups.tf  terraform.tfvars.example  variables.tf  vpc.tf
(+3 files in other folders)
