[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django==5.1.7",
    "django-cors-headers==4.6.0",
    "django-environ==0.11.2",
    "django-filter==24.3",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
]
